[package]
name = "upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tokio"] }
base64 = "0.21.7"
bcrypt = "0.15.0"
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.10"

[profile.release]
opt-level = 3
lto = true
