[package]
name = "upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0", features = ["tokio"] }
base64 = "0"
bcrypt = "0"
blake3 = "1"
futures-util = "0"
jsonwebtoken = { version = "9", default-features = false }
rand = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["io"] }
toml = "0"

[profile.release]
opt-level = 3
lto = true
